--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 Flask==0.10.1
-Flask-SocketIO==1.2
+git+git://github.com/miguelgrinberg/Flask-SocketIO.git@v2.0#egg=Flask-SocketIO
+gevent==1.1rc3
+gevent-websocket==0.9.5
+greenlet==0.4.9
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 pyserial==3.0
-python-engineio==0.8.5
-python-socketio==0.9.0
+python-engineio==0.8.6
+python-socketio==0.9.1
+q==2.6
 six==1.10.0
 Werkzeug==0.11.3
 wheel==0.26.0
