--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 Flask==0.10.1
-git+git://github.com/miguelgrinberg/Flask-SocketIO.git@v2.0#egg=Flask-SocketIO
-gevent==1.1rc3
+Flask-SocketIO==2.3
+gevent==1.1.1
 gevent-websocket==0.9.5
 greenlet==0.4.9
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-pyserial==3.0
-python-engineio==0.8.6
-python-socketio==0.9.1
+pyserial==3.0.1
+python-engineio==0.9.1
+python-socketio==1.3
 q==2.6
 six==1.10.0
-Werkzeug==0.11.3
-wheel==0.26.0
+Werkzeug==0.11.10
