switched from select2 to selectize. js files updated. requirements updated. homing implemented in frontend.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
+eventlet==0.19.0
 Flask==0.10.1
 Flask-SocketIO==2.3
-gevent==1.1.1
-gevent-websocket==0.9.5
 greenlet==0.4.9
 itsdangerous==0.24
 Jinja2==2.8
