--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+appdirs==1.4.0
+click==6.6
 eventlet==0.19.0
-Flask==0.10.1
-Flask-SocketIO==2.3
+Flask==0.11.1
+Flask-SocketIO==2.7.1
 greenlet==0.4.9
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+packaging==16.7
+pyparsing==2.1.9
 pyserial==3.0.1
-python-engineio==0.9.1
-python-socketio==1.3
+python-engineio==1.0.3
+python-socketio==1.5.1
 q==2.6
+RPi.GPIO==0.6.2
 six==1.10.0
-Werkzeug==0.11.10
+Werkzeug==0.11.11
